# luanti

./: .gitignore  .gitmodules  .luacheckrc  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  QUAD_SPHERE_PLANET_PLAN.md  README.md  build.sh  minetest.conf.example  shell.nix  vcpkg.json  world_format.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/workflows/: android.yml  docker_image.yml  linux.yml  lua.yml  lua_api_deploy.yml  macos.yml  whitespace_checks.yml  windows.yml
android/: build.gradle
builtin/: CMakeLists.txt  init.lua  settingtypes.txt
builtin/async/: CMakeLists.txt
builtin/client/: CMakeLists.txt
builtin/common/: CMakeLists.txt  after.lua  chatcommands.lua  filterlist.lua  information_formspecs.lua  item_s.lua  math.lua  misc_helpers.lua  serialize.lua  strict.lua  vector.lua  vector2.lua
builtin/common/settings/: CMakeLists.txt  components.lua  dlg_change_keybinding.lua  dlg_change_mapgen_flags.lua  dlg_settings.lua  generate_from_settingtypes.lua  init.lua  settingtypes.lua
builtin/common/tests/: after_spec.lua  math_spec.lua  misc_helpers_spec.lua  serialize_spec.lua  vector2_spec.lua  vector_spec.lua
builtin/emerge/: CMakeLists.txt  env.lua
builtin/fstk/: CMakeLists.txt  tabview.lua  ui.lua
builtin/game/: CMakeLists.txt  chat.lua  constants.lua  default_physics.lua  deprecated.lua  features.lua  init.lua  item.lua  line.lua  misc.lua  register.lua  sscsm_bridge.lua  voxelarea.lua
builtin/locale/: __builtin.be.po  __builtin.bg.po  __builtin.bg.tr  __builtin.ca.po  __builtin.cs.po  __builtin.cy.po  __builtin.da.po  __builtin.de.po  __builtin.de.tr  __builtin.el.po  __builtin.eo.po  __builtin.es.po  __builtin.et.po  __builtin.eu.po  __builtin.fi.po  __builtin.fil.po  __builtin.fr.po  __builtin.ga.po  __builtin.gl.po  __builtin.hu.po  __builtin.id.po  __builtin.it.po  __builtin.ja.po  __builtin.jbo.po  __builtin.jv.po  __builtin.ko.po  __builtin.kv.po  __builtin.ky.po  __builtin.lt.po  __builtin.lv.po  __builtin.lzh.po  __builtin.mn.po  __builtin.mr.po  __builtin.ms.po  __builtin.nb.po  __builtin.nl.po  __builtin.nn.po  __builtin.oc.po  __builtin.pl.po  __builtin.pot  (+17 more)
builtin/mainmenu/: CMakeLists.txt  common.lua  dlg_clients_list.lua  dlg_config_world.lua  dlg_confirm_exit.lua  dlg_create_world.lua  dlg_csm.lua  dlg_rebind_keys.lua  dlg_register.lua  dlg_reinstall_mtg.lua  dlg_rename_modpack.lua  dlg_rename_world.lua  dlg_server_list_mods.lua  dlg_version_info.lua  game_theme.lua  init.lua  keyringmgr.lua  serverlistmgr.lua  tab_about.lua  tab_content.lua  tab_local.lua  tab_online.lua
builtin/mainmenu/content/: CMakeLists.txt  contentdb.lua  dlg_contentdb.lua  dlg_install.lua  dlg_package.lua  dlg_package_reporting_consent.lua  init.lua  pkgmgr.lua  update_detector.lua
builtin/mainmenu/content/tests/: pkgmgr_spec.lua
builtin/pause_menu/: CMakeLists.txt
builtin/profiler/: CMakeLists.txt  init.lua  instrumentation.lua
builtin/sscsm_client/: CMakeLists.txt  init.lua  register.lua
builtin/sscsm_server/: CMakeLists.txt  init.lua
builtin/types/: colorspec.lua  nodebox.lua  nodedrop.lua  register.lua  sound.lua  tilespec.lua  vector.lua
builtin/ui/: selector.lua  style.lua  window.lua
doc/: DEVELOPER_MANUAL.md  README.md  ai_policy.md  android.md  breakages.md  client_lua_api.md  compiling.md  direction.md  docker_server.md  experimental_ui_api.md  lua_api.md  luanti.6  mariadb-setup.md  menu_lua_api.md  sscsm_api.md  sscsm_security.md  texture_packs.md  world.mt.rollback_postgresql.example  world_format.md
doc/compiling/: ios.md  (+5 more)
irr/: README.md
lib/lua/src/: CMakeLists.txt  ldo.c  luaconf.h
mapgens/: mapgens_here.txt
misc/: AppImageBuilder.yml  net.minetest.minetest.desktop  org.luanti.luanti.desktop  org.luanti.luanti.metainfo.xml  redirect.html
po/: luanti.pot
src/: CMakeLists.txt  activeobject.h  activeobjectmgr.h  builtin_files.cpp.in  builtin_files.h  chat.cpp  chat.h  chat_interface.h  cmake_config.h.in  collision.cpp  collision.h  constants.h  craftdef.cpp  craftdef.h  defaultsettings.cpp  dummymap.h  emerge.cpp  emerge.h  exceptions.h  filesys.cpp  filesys.h  gamedef.h  gameparams.h  gettext.cpp  gettext.h  gettext_plural_form.cpp  gettext_plural_form.h  httpfetch.cpp  hud.h  hud_element.cpp  hud_element.h  inventory.cpp  inventory.h  inventorymanager.cpp  inventorymanager.h  irr_aabb3d.h  irr_v2d.h  irr_v3d.h  irrlichttypes.h  irrlichttypes_bloated.h  (+70 more)
src/test/: CMakeLists.txt  test_irr_rotation.cpp  test_k_d_tree.cpp  test_packet_dispatcher.cpp  test_quic_address.cpp  test_quic_connection.cpp  test_quic_tls.cpp  test_serveractiveobjectmgr.cpp
src/test/client/: test_irr_x_mesh_loader.cpp
tests/: client1.conf  log.txt  server.conf
util/: test_multiplayer.sh  updatepo.sh
(+711 files in other folders)
